Update leader names in index.html

--- a/index.html
+++ b/index.html
@@ -945,12 +945,12 @@
                     </div>
                     <div class="leader-item">
                         <span class="leader-rank">#2</span>
-                        <span>Akanksha Singh</span>
+                        <span> Akhil Singh 1</span>
                         <span style="font-weight: 600; color: var(--primary);">2,180 pts</span>
                     </div>
                     <div class="leader-item">
                         <span class="leader-rank">#3</span>
-                        <span>Muskan Singh</span>
+                        <span>Akhil Singh2</span>
                         <span style="font-weight: 600; color: var(--primary);">1,890 pts</span>
                     </div>
                     <div class="leader-item" style="background: #e8f5e8; padding: 10px; border-radius: 8px; margin-top: 5px;">
